--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3951,6 +3951,44 @@
         "th":"",
         "id":""
     },
+    "item.3063.name":{
+        "en":"[Spirit Egg] Shako",
+        "fr":"[Oeuf d'esprit] Shako",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Shako",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3064.name":{
+        "en":"[Spirit Egg] Shamu",
+        "fr":"[Oeuf d'esprit] Shamu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Shamu",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3038.name":{
         "en":"[Spirit Egg] Lava Familiar",
         "fr":"[Oeuf d'esprit] Familier de Lave",
@@ -5072,6 +5110,25 @@
         "th":"",
         "id":""
     },
+    "item.4061.name":{
+        "en":"Desert Raider",
+        "fr":"Corsaire du Désert",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tướng Cướp Sa Mạc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4036.name":{
         "en":"Byron Warrior Spirit",
         "fr":"Esprit Guerrier de Byron",
@@ -5110,9 +5167,9 @@
         "th":"",
         "id":""
     },
-    "item.4061.name":{
-        "en":"Desert Raider",
-        "fr":"Corsaire du Désert",
+    "item.4062.name":{
+        "en":"Baby Dragon",
+        "fr":"Bébé Dragon",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5122,7 +5179,45 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tướng Cướp Sa Mạc",
+        "vi":"Rồng Con",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4063.name":{
+        "en":"Shako",
+        "fr":"Shako",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Shako",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4064.name":{
+        "en":"Shamu",
+        "fr":"Shamu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Shamu",
         "ar":"",
         "it":"",
         "pl":"",
