--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -7562,8 +7562,8 @@
         "id":""
     },
     "UI.windows.dps_meter.desc":{
-        "en":"<i>Damages since last 30 seconds</i>",
-        "fr":"<i>Dégâts depuis les 30 dernière secondes</i>",
+        "en":"<i>Damage dealt in the last 30 seconds</i>",
+        "fr":"<i>Dégâts infligés dans les 30 dernières secondes</i>",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
