--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1702,7 +1702,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận phần thưởng gấp đôi sẽ tiêu tốn: {0} x1. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1721,7 +1721,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàn thành nhiệm vụ này sẽ tiêu tốn: {0} x1. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1740,7 +1740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận phần thưởng gấp đôi sẽ tiêu hao: {0} x1. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7554,7 +7554,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đo Sát Thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7573,7 +7573,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"<i>Sát thương gây ra trong 30 giây vừa rồi</i>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7592,7 +7592,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"DPS Cuối",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7611,7 +7611,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"DPS Trung Bình",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7630,7 +7630,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"DPS Tối Đa",
         "ar":"",
         "it":"",
         "pl":"",
