--- a/Translation/general.json
+++ b/Translation/general.json
@@ -258,7 +258,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thưởng Gấp Đôi",
         "ar":"",
         "it":"",
         "pl":"",
