--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3963,7 +3963,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sa Nô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5198,7 +5198,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Nô",
         "ar":"",
         "it":"",
         "pl":"",
