--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3989,6 +3989,44 @@
         "th":"",
         "id":""
     },
+    "item.3065.name":{
+        "en":"[Spirit Egg] ??????",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3066.name":{
+        "en":"[Spirit Egg] ??????",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3038.name":{
         "en":"[Spirit Egg] Lava Familiar",
         "fr":"[Oeuf d'esprit] Familier de Lave",
@@ -5218,6 +5256,44 @@
         "jp":"",
         "pt":"",
         "vi":"Lục Hành Kê",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4065.name":{
+        "en":"??????",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4066.name":{
+        "en":"??????",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
