--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3990,8 +3990,8 @@
         "id":""
     },
     "item.3065.name":{
-        "en":"[Spirit Egg] ??????",
-        "fr":"",
+        "en":"[Spirit Egg] Thresher",
+        "fr":"[Oeuf d'esprit] Batteuse",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -4009,8 +4009,8 @@
         "id":""
     },
     "item.3066.name":{
-        "en":"[Spirit Egg] ??????",
-        "fr":"",
+        "en":"[Spirit Egg] Bloody Thresher",
+        "fr":"[Oeuf d'esprit] Batteuse Sanglante",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5263,8 +5263,8 @@
         "id":""
     },
     "item.4065.name":{
-        "en":"??????",
-        "fr":"",
+        "en":"Thresher",
+        "fr":"Batteuse",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5282,8 +5282,8 @@
         "id":""
     },
     "item.4066.name":{
-        "en":"??????",
-        "fr":"",
+        "en":"Bloody Thresher",
+        "fr":"Batteuse Sanglante",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
