--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4027,6 +4027,25 @@
         "th":"",
         "id":""
     },
+    "item.3067.name":{
+        "en":"[Spirit Egg] Elite Fiery Guardian",
+        "fr":"[Oeuf d'esprit] Gardien ardent d'élite",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3038.name":{
         "en":"[Spirit Egg] Lava Familiar",
         "fr":"[Oeuf d'esprit] Familier de Lave",
@@ -5284,6 +5303,25 @@
     "item.4066.name":{
         "en":"Red Sandworm",
         "fr":"Ver des Sables Rouge",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4067.name":{
+        "en":"Elite Fiery Guardian",
+        "fr":"Gardien ardent d'élite",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
