--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4369,6 +4369,25 @@
         "th":"",
         "id":""
     },
+    "item.3068.name":{
+        "en":"[Spirit Egg] Blossom Potpent",
+        "fr":"[Oeuf d'esprit] Potpent Épanoui",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
@@ -5655,6 +5674,25 @@
         "jp":"",
         "pt":"",
         "vi":"Dung Hóa Ma Tượng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4068.name":{
+        "en":"Blossom Potpent",
+        "fr":"Potpent Épanoui",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
