--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4388,9 +4388,29 @@
         "th":"",
         "id":""
     },
+    },
+    "item.3069.name":{
+        "en":"[Spirit Egg] Tormented Spirit",
+        "fr":"[Oeuf d'esprit] Esprit Tourmenté",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
-        "fr":"[Oeuf d'esprit] Slime Pudding",
+        "fr":"Slime Pudding",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5683,6 +5703,25 @@
     "item.4068.name":{
         "en":"Blossom Potpent",
         "fr":"Potpent Épanoui",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4069.name":{
+        "en":"Tormented Spirit",
+        "fr":"Esprit Tourmenté",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
