--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4001,7 +4001,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sa Trùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4020,7 +4020,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sa Trùng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4039,7 +4039,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hỏa Viêm Giám Hộ Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4096,7 +4096,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Song Lửa",
+        "vi":"[Linh Trứng] Song Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4115,7 +4115,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hỏa Diệm Lửa",
+        "vi":"[Linh Trứng] Chân Viêm Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4153,7 +4153,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hỏa Diệm Lính",
+        "vi":"[Linh Trứng] Hỏa Viêm Nô Bộc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4381,7 +4381,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Niêu Xà Hoa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4400,7 +4400,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Vong Hồn Khổ Đau",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5331,7 +5331,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Trùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5350,7 +5350,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sa Trùng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5369,7 +5369,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hỏa Viêm Giám Hộ Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5426,7 +5426,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Song Lửa",
+        "vi":"Song Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5445,7 +5445,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Diệm Lửa",
+        "vi":"Chân Viêm Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5483,7 +5483,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Diệm Lính",
+        "vi":"Hỏa Viêm Nô Bộc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5711,7 +5711,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Niêu Xà Hoa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5730,7 +5730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vong Hồn Khổ Đau",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9791,7 +9791,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lửa Diễm Ma",
+        "vi":"Diễm Ma Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
