--- a/Translation/item.json
+++ b/Translation/item.json
@@ -15138,7 +15138,7 @@
         "id":""
     },
     "item.35011.description":{
-        "en":"Right click to get :<br> - Healing Potion x 20<br> - Greater Magic Potion x 20<br> - Instant Healing Flask x 2<br> - Greater Instant Magic Flask x 2<br> - Mini Teleport Crystal x 2<br> - Town Portal Scroll x 2 - Gold x 2500<br> - Elemental Gem",
+        "en":"Right click to get :<br> - Healing Potion x 20<br> - Greater Magic Potion x 20<br> - Instant Healing Flask x 2<br> - Greater Instant Magic Flask x 2<br> - Mini Teleport Crystal x 2<br> - Town Portal Scroll x 2<br> - Gold x 2500<br> - Elemental Gem",
         "fr":"Click droit pour obtenir:<br> - Potion de Soin x 20<br> - Grande Potion de Mana x 20<br> - Flacon de Guérison Instantanée x 2<br> - Flacon de Mana Instantané x 2<br> - Mini Cristal de Téléportation x 2<br> - Parchemin Portail de la Ville x 2<br> - Or x 2500<br> - Gemme Élementaire",
         "es":"",
         "zh-cn":"",
