--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11584,6 +11584,44 @@
         "th":"",
         "id":""
     },
+    "item.20015.name":{
+        "en":"Firecord",
+        "fr":"Lavcorde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.20016.name":{
+        "en":"Woodcord",
+        "fr":"Boiscorde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
