--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11680,8 +11680,8 @@
         "id":""
     },
     "item.20020.name":{
-        "en":"Telluric Mana",
-        "fr":"Mana Tellurique",
+        "en":"Telluric Gear",
+        "fr":"Engrenage Tellurique",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
