--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11501,7 +11501,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nham Hồn",
+        "vi":"Địa Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11577,7 +11577,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Địa Hồn",
+        "vi":"Thổ Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11596,7 +11596,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hỏa Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11615,7 +11615,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộc Hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11634,7 +11634,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nước Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11653,7 +11653,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Băng Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11672,7 +11672,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Bị Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11691,7 +11691,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguồn Địa Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -15263,7 +15263,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu x 20<br> - Thuốc Năng Lượng Nhiều x 20<br> - Bình Hồi Máu Tức Thì x 2<br> - Bình Hồi Máu Tức Thì Nhiều x 2<br> - Pha Lê Dịch Chuyển Nhỏ x 2<br> - Trục Hồi Thành x 2 - Vàng x 2500<br> - Ngọc Nguyên Tố",
+        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu x 20<br> - Thuốc Năng Lượng Nhiều x 20<br> - Bình Hồi Máu Tức Thì x 2<br> - Bình Hồi Máu Tức Thì Nhiều x 2<br> - Pha Lê Dịch Chuyển Nhỏ x 2<br> - Trục Hồi Thành x 2<br> - Vàng x 2500<br> - Ngọc Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
